--- a/index.html
+++ b/index.html
@@ -3,33 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Concert Booking</title>
+    <title>Your Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Concert Booking</h1>
-    </header>
-
-    <section id="ticketSection">
-        <h2>Vælg Koncert</h2>
-        <select id="concertSelect">
-            <option value="concert1">Koncert 1</option>
-            <option value="concert2">Koncert 2</option>
-            <!-- Tilføj flere koncerter efter behov -->
-        </select>
-        <button onclick="loadTicketForm()">Bestil Billetter</button>
-        <div id="ticketForm"></div>
-    </section>
-
-    <section id="bookingSection">
-        <!-- Bookingformular indhold her -->
-    </section>
-
-    <footer>
-        <p>&copy; 2024 Concert Booking</p>
-    </footer>
-
-    <script src="index.js"></script>
+    <nav>
+        <div id="header">
+            <a href="#" class="logo"><img src="logo.png" alt=""></a>
+            <ul>
+                <li><a href="#">Events</a></li>
+                <li><a href="#">Opret event</a></li>
+                <li><a href="#">Log In</a></li>
+                <li><a href="#">Sign Up</a></li>
+            </ul>
+        </div>
+    </nav>
 </body>
 </html>
