--- a/index.html
+++ b/index.html
@@ -2,21 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"
     <title>Your Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
+    <header>
         <div id="header">
             <a href="#" class="logo"><img src="logo.png" alt=""></a>
-            <ul>
-                <li><a href="#">Events</a></li>
-                <li><a href="#">Opret event</a></li>
-                <li><a href="#">Log In</a></li>
-                <li><a href="#">Sign Up</a></li>
-            </ul>
+            <nav>
+                <ul>
+                    <li><a href="#">Events</a></li>
+                    <li><a href="#">Opret event</a></li>
+                    <li><a href="#">Log In</a></li>
+                    <li><a href="#">Sign Up</a></li>
+                </ul>
+            </nav>
         </div>
-    </nav>
+    </header>
+    <div id="concert-grid">
+        <article class="concert-grid-item"><img src="concert.jpg" alt="Concert"></article>
+        <article class="concert-grid-item"><img src="concert.jpg" alt="Concert"></article>
+        <article class="concert-grid-item"><img src="concert.jpg" alt="Concert"></article>
+        <article class="concert-grid-item"><img src="concert.jpg" alt="Concert"></article>
+        <article class="concert-grid-item"><img src="concert.jpg" alt="Concert"></article>
+        <article class="concert-grid-item"><img src="concert.jpg" alt="Concert"></article>
+        
+    </div>
 </body>
 </html>
