Create event oprettet

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"
-    <title>Your Website</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lydhavn</title>
+    <link rel="shortcut icon" href="logo.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,21 +14,30 @@
             <nav>
                 <ul>
                     <li><a href="#">Events</a></li>
-                    <li><a href="#">Opret event</a></li>
+                    <li><a href="create event/create.html">Opret event</a></li>
                     <li><a href="#">Log In</a></li>
                     <li><a href="#">Sign Up</a></li>
                 </ul>
             </nav>
         </div>
     </header>
-    <div id="concert-grid">
-        <article class="concert-grid-item"><img src="concert.jpg" alt="Concert"></article>
-        <article class="concert-grid-item"><img src="concert.jpg" alt="Concert"></article>
-        <article class="concert-grid-item"><img src="concert.jpg" alt="Concert"></article>
-        <article class="concert-grid-item"><img src="concert.jpg" alt="Concert"></article>
-        <article class="concert-grid-item"><img src="concert.jpg" alt="Concert"></article>
-        <article class="concert-grid-item"><img src="concert.jpg" alt="Concert"></article>
-        
+    <div>
+        <h2>Velkommen til LYDHAVNEN!</h2>
+        <p>Her kan du finde alle de bedste events i Danmark. Find det perfekte arrangement for dig og dine venner.</p>
+        <p>Her kan du finde alle de bedste events i Danmark og udlandet.</p>
+    </div>
+    
+    <!-- Event 1 -->
+    <section>
+        <div class="event">
+            <h3>Event Name</h3>
+            <img src="wafande.png" alt="">
+            <div class="info">
+                <span class="date">Date: dd/mm/yyyy - hh:mm</span>
+                <span class="location">Location: City, Country</span>
+                <button>More info</button>
+            </div>
+        </div>
     </div>
 </body>
 </html>
