--- a/create event/create.html
+++ b/create event/create.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Event</title>
     <link rel="stylesheet" href="create.css">
+    <script src="create.js"></script>
 </head>
 <body>
     <header>
