--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <header>
         <div id="header">
-            <a href="#" class="logo"><img src="logo.png" alt=""></a>
+            <a href="#" class="logo"><img src="Pictures/logo.png" alt=""></a>
             <nav>
                 <ul>
                     <li><a href="#">Events</a></li>
-                    <li><a href="create event/create.html">Opret event</a></li>
+                    <li><a href="create.html">Opret event</a></li>
                     <li><a href="#">Log In</a></li>
                     <li><a href="#">Sign Up</a></li>
                 </ul>
@@ -31,7 +31,7 @@
     <section>
         <div class="event">
             <h3>Event Name</h3>
-            <img src="wafande.png" alt="">
+            <img src="Pictures/wafande.png" alt="">
             <div class="info">
                 <span class="date">Date: dd/mm/yyyy - hh:mm</span>
                 <span class="location">Location: City, Country</span>
