--- a/Hjem/hjem.html
+++ b/Hjem/hjem.html
@@ -3,50 +3,48 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tilfældige Events</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>Spillested - Koncerter</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300">
+  <link rel="stylesheet" href="hjem.css">
 </head>
 <body>
-  <header>
-    <h1>Tilfældige Events</h1>
-  </header>
-
-  <main>
-    <div class="event-list">
-      <?php
-      // Array med scener og tilfældige events
-      $scenes = array(
-        "Lydloftet" => array(
-          "Rock koncert",
-          "Hip-hop show",
-          "Akustisk session"
-        ),
-        "Harmoni Hallen" => array(
-          "Jazz festival",
-          "Pop optræden",
-          "Klassisk koncert"
-        ),
-        "Lyric Lounge" => array(
-          "Stand-up comedy",
-          "Poesi aften",
-          "Open mic nat"
-        )
-      );
-
-      // Viser et tilfældigt event for hver scene
-      foreach ($scenes as $scene => $events) {
-        $random_event = $events[array_rand($events)];
-        echo "<div class='event'>";
-        echo "<h2>$scene</h2>";
-        echo "<p><strong>Event:</strong> $random_event</p>";
-        echo "</div>";
-      }
-      ?>
+  <div class="header">
+    <img src="../Pictures/lydhavnLogo.png" alt="Logo" class="logo">
+    <a href="../Hjem/hjem.html">Events</a>
+    <a href="../Create-event/create-event.html">Book event</a>
+    <a href="../login/login.html#login-form">Log in</a>
+    <a href="../login/login.html#">Opret bruger</a>
+  </div>
+  <div class="container">
+    <div class="concerts">  
+      <div class="concert">
+        <h2>Koncert Navn 1</h2>
+        <p>Dato: 10. maj 2024</p>
+        <p>Tid: 20:00</p>
+        <p>Sted: Koncertsalen</p>
+        <p>Pris: 150 kr.</p>
+        <p>Beskrivelse: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <img src="https://via.placeholder.com/300" alt="Koncert 1">
+      </div>
+      <div class="concert">
+        <h2>Koncert Navn 2</h2>
+        <p>Dato: 15. maj 2024</p>
+        <p>Tid: 19:30</p>
+        <p>Sted: Lille Scene</p>
+        <p>Pris: 100 kr.</p>
+        <p>Beskrivelse: Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <img src="https://via.placeholder.com/300" alt="Koncert 2">
+      </div>
+      <div class="concert">
+        <h2>Koncert Navn 3</h2>
+        <p>Dato: 20. maj 2024</p>
+        <p>Tid: 21:00</p>
+        <p>Sted: Store Sal</p>
+        <p>Pris: 200 kr.</p>
+        <p>Beskrivelse: Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <img src="https://via.placeholder.com/300" alt="Koncert 3">
+      </div>
     </div>
-  </main>
-
-  <footer>
-    <p>&copy; 2024 Lydhavn. Alle rettigheder forbeholdes.</p>
-  </footer>
+  </div>
 </body>
 </html>
