--- a/index.html
+++ b/index.html
@@ -1,25 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lydhavn</title>
-    <link rel="shortcut icon" href="logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Spillested - Koncerter</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300">
+  <link rel="stylesheet" href="hjem.css">
 </head>
 <body>
-    <header>
-        <div id="header">
-            <a href="#" class="logo"><img src="Pictures/logo.png" alt=""></a>
-            <nav>
-                <ul>
-                    <li><a href="#">Events</a></li>
-                    <li><a href="create.html">Opret event</a></li>
-                    <li><a href="#">Log In</a></li>
-                    <li><a href="#">Sign Up</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+  <div class="header">
+    <img src="../Pictures/lydhavnLogo.png" alt="Logo" class="logo">
+    <a href="index.html">Events</a>
+    <a href="../Create-event/create-event.html">Book event</a>
+    <a href="../login/login.html#login-form">Log in</a>
+    <a href="../login/login.html#">Opret bruger</a>
+  </div>
+  <div class="container">
+    <div class="concerts">  
+      <div class="concert">
+        <h2>Koncert Navn 1</h2>
+        <p>Dato: 10. maj 2024</p>
+        <p>Tid: 20:00</p>
+        <p>Sted: Koncertsalen</p>
+        <p>Pris: 150 kr.</p>
+        <p>Beskrivelse: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <img src="https://via.placeholder.com/300" alt="Koncert 1">
+      </div>
+      <div class="concert">
+        <h2>Koncert Navn 2</h2>
+        <p>Dato: 15. maj 2024</p>
+        <p>Tid: 19:30</p>
+        <p>Sted: Lille Scene</p>
+        <p>Pris: 100 kr.</p>
+        <p>Beskrivelse: Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <img src="https://via.placeholder.com/300" alt="Koncert 2">
+      </div>
+      <div class="concert">
+        <h2>Koncert Navn 3</h2>
+        <p>Dato: 20. maj 2024</p>
+        <p>Tid: 21:00</p>
+        <p>Sted: Store Sal</p>
+        <p>Pris: 200 kr.</p>
+        <p>Beskrivelse: Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <img src="https://via.placeholder.com/300" alt="Koncert 3">
+      </div>
+    </div>
+  </div>
 </body>
 </html>
