--- a/login/login.html
+++ b/login/login.html
@@ -15,7 +15,7 @@
 <body>
     <div class="header">
         <img src="../Pictures/lydhavnLogo.png" alt="Logo" class="logo">
-        <a href="../Hjem/hjem.html">Events</a>
+        <a href="../index.html">Events</a>
         <a href="../Create-event/create-event.html">Book event</a>
         <a href="../login/login.html#login-form">Log in</a>
         <a href="../login/login.html#">Opret bruger</a>
