--- a/index.html
+++ b/index.html
@@ -18,31 +18,31 @@
   <div class="container">
     <div class="concerts">  
       <div class="concert">
-        <h2>Koncert Navn 1</h2>
+        <h2>Wafande</h2>
         <p>Dato: 10. maj 2024</p>
         <p>Tid: 20:00</p>
         <p>Sted: Koncertsalen</p>
         <p>Pris: 150 kr.</p>
-        <p>Beskrivelse: Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        <img src="https://via.placeholder.com/300" alt="Koncert 1">
+        <p>Beskrivelse: Wafande kommer og giver en god Koncert.</p>
+        <img src="./Pictures/wafande.jpg" alt="Koncert 1">
       </div>
       <div class="concert">
-        <h2>Koncert Navn 2</h2>
+        <h2>Gilli</h2>
         <p>Dato: 15. maj 2024</p>
         <p>Tid: 19:30</p>
-        <p>Sted: Lille Scene</p>
+        <p>Sted: Stor Scene</p>
         <p>Pris: 100 kr.</p>
-        <p>Beskrivelse: Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <img src="https://via.placeholder.com/300" alt="Koncert 2">
+        <p>Beskrivelse: Gilli kommer og spiller en vanvittig koncert du ikke vil gå glip af.</p>
+        <img src="./Pictures/Gilli.jpg" alt="Koncert 2">
       </div>
       <div class="concert">
-        <h2>Koncert Navn 3</h2>
+        <h2>Kesi</h2>
         <p>Dato: 20. maj 2024</p>
         <p>Tid: 21:00</p>
         <p>Sted: Store Sal</p>
         <p>Pris: 200 kr.</p>
-        <p>Beskrivelse: Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        <img src="https://via.placeholder.com/300" alt="Koncert 3">
+        <p>Beskrivelse: Kesi spiller en af hans berømte koncerter.</p>
+        <img src="./Pictures/Kesi.jpg" alt="Koncert 3">
       </div>
     </div>
   </div>
